force-app/main/default/objects/DNBConnect__DnBAccountMetadata__c/DNBConnect__DnBAccountMetadata__c.object-meta.xml
<CustomObject>
    <description>This is a D&amp;B custom object used to store data that&apos;s used for Connect dashboards, to minimize the impact on the standard Account object.</description>
    <label>D&amp;B Account Metadata</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Account Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>