force-app/main/default/objects/DNBConnect__DnBAccountMetadata__c/fields/DNBConnect__LinkageOpportunityType__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__LinkageOpportunityType__c</fullName>
    <description>0 = Not Evaluated
1 = Correctly Linked
2 = Standalone (Not a Family Tree Member)
3 = No Parent (Global Ultimate)
4 = Link Opportunity
5 = Create and Link Opportunity
6 = Relink Opportunity
7 = Create and Relink Opportunity
8 = Duplicate Parent</description>
    <inlineHelpText>0 = Not Evaluated
1 = Correctly Linked
2 = Standalone (Not a Family Tree Member)
3 = No Parent (Global Ultimate)
4 = Link Opportunity
5 = Create and Link Opportunity
6 = Relink Opportunity
7 = Create and Relink Opportunity
8 = Duplicate Parent</inlineHelpText>
    <label>Linkage Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>