force-app/main/default/objects/DNBConnect__DnBAccountMetadata__c/fields/DNBConnect__Parent_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__Parent_DUNS__c</fullName>
    <label>D&amp;B Parent DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>