force-app/main/default/objects/DNBConnect__DnBAccountMetadata__c/fields/DNBConnect__reparented__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__reparented__c</fullName>
    <formula>DNBConnect__parent_id__c  &lt;&gt; DNBConnect__Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reparented</label>
    <type>Checkbox</type>
</CustomField>